@@ -1,3 +1,7 @@
+2011-09-20  Simon Baldwin  <simonb@google.com>
+
+	* module.c (gfc_dump_module): Omit timestamp from output.
+
 2011-09-17  Janus Weil  <janus@gcc.gnu.org>
 
 	PR fortran/50403
